# toolbridge-api

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT-SESSION-SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.mcp  Dockerfile.mcp-only  FLYIO-DEPLOYMENT-SUMMARY.md  GRPC_WEB_EXPERIMENTAL.md  Jenkinsfile  Makefile  PR_DESCRIPTION.md  README.md  REST_API_TESTING.md  docker-compose.mcp-test.yml  docker-compose.yml  fly.mcp.toml  fly.staging.toml  go.mod  go.sum  test_rest_api.sh
.repoprompt/: filepartitions-b37cd0b4-6e00-4cb3-ac44-0ce9c2dcc385-f94c2ed8-f749-4b39-bb28-6887319e9066.json
Plans/: fastmcp-integration.md  mcp-flyio-deployment.md  phase2-flyio-deployment-prompt.md  redis-distributed-state.md  server-side-manual-ordering.md  testing-oidc-tenant-claims.md
apps-wrapper/: Dockerfile  fly.toml  package-lock.json  package.json
chart/: Chart.yaml  README.md  values.yaml
chart-mcp/: Chart.yaml  values.yaml
chart-mcpbridge/: values.yaml
config/: mcpbridge_config.dev.json  mcpbridge_config.example.json
deployment/: supervisord.conf
docs/: ARCHITECT-PROMPT-TOKEN-REFRESH.md  AUTH0-AUTO-REFRESH-GUIDE.md  CLAUDE-DESKTOP-SETUP.md  CLIENT_SYNC_GUIDE.md  DEPLOYMENT-FLYIO.md  (+20 more)
mcp/: .env.example  .gitignore  Dockerfile.mcp-only  README.md  dev.sh  nanobot-test.yaml  pyproject.toml  test_auth0_real.py  test_auth_fallback.py  test_integration.py  test_note_edit_ui.py  test_token_exchange.py  test_ui_local.py  test_ui_server.py  test_ui_tools_direct.py
mcp/docs/: workos-dcr-authentication.md
mcp/tests/: __init__.py  conftest.py  test_diff.py  test_note_edit_sessions.py  test_note_edits_dom.py  test_ui_resources.py  test_ui_templates.py
mcp/toolbridge_mcp/: __init__.py  async_client.py  config.py  mcp_instance.py  note_edit_sessions.py  server.py
mcp/toolbridge_mcp/auth/: __init__.py  tenant_resolver.py  token_exchange.py  token_manager.py
mcp/toolbridge_mcp/tools/: __init__.py  chat_messages.py  chats.py  comments.py  notes.py  notes_ui.py  tasks.py  tasks_ui.py
mcp/toolbridge_mcp/transports/: __init__.py  tenant_direct.py
mcp/toolbridge_mcp/ui/: __init__.py  apps_resources.py  apps_templates.py  resources.py
mcp/toolbridge_mcp/ui/remote_dom/: __init__.py  design.py  note_edits.py  notes.py  tasks.py
mcp/toolbridge_mcp/ui/templates/: __init__.py  note_edits.py  notes.py  tasks.py
mcp/toolbridge_mcp/utils/: __init__.py  diff.py  headers.py  requests.py  session.py
(+158 files in other folders)
