[project]
name = "toolbridge-mcp"
version = "0.1.0"
description = "FastMCP server for ToolBridge - MCP integration for note-taking and task management"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "ToolBridge Team" }
]

dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolbridge_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [".", "toolbridge_mcp"]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["toolbridge_mcp"]
omit = ["tests/*", "**/__pycache__/*"]
