[project]
name = "toolbridge-mcp"
version = "0.1.0"
description = "FastMCP server for ToolBridge - MCP integration for note-taking and task management"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "ToolBridge Team" }
]

dependencies = [
    "fastmcp[auth]>=2.12.0",  # Includes OAuth providers
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",  # For JWT signing in token exchange
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolbridge_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = [".", "toolbridge_mcp"]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["toolbridge_mcp"]
omit = ["tests/*", "**/__pycache__/*"]
